# ObjOriented

./: .gitignore
harj1/: CMakeLists.txt  main.cpp  myfunctions.cpp  myfunctions.h
